# deepcrew-ai

./: .gitignore  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  SECURITY.md  pyproject.toml
.claude/: launch.json
.claude/skills/deepcrew/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: examples.html  features.html  index.html
docs/assets/css/: style.css
docs/assets/js/: main.js
examples/: README.md  automated_example.py  autonomous_task_planning.py  consensus_code_review.py  fastapi_streaming.py  human_in_the_loop.py  mcp_example.py  multimodal_agent.py  self_improving_research.py  simple_agent.py  structured_output.py  workflow_example.py
pages/: examples.html  features.html  index.html  llms-full.txt  llms.txt
pages/assets/css/: style.css
pages/assets/js/: main.js
pages/guides/: apex.html  cli.html  fastapi.html  hooks.html  looping.html  memory.html  migration.html  multimodal.html  observability.html  procedural-memory.html  redis-memory.html  retry.html  skills.html  spawning.html  streampolicy.html  structured-output.html  verifier.html
pages/md/: examples.md  features.md  index.md  migration.md
pages/md/guides/: apex.md  cli.md  fastapi.md  hooks.md  looping.md  memory.md  multimodal.md  observability.md  procedural-memory.md  redis-memory.md  retry.md  skills.md  spawning.md  streampolicy.md  structured-output.md  verifier.md
src/deepcrew/: __init__.py  agent.py  apex.py  content.py  exceptions.py  hooks.py  loop.py  observability.py  orchestrator.py  procedural_memory.py  retry.py  runner.py  spawner.py  stream.py  tools.py  types.py  verifier.py  workflow.py
src/deepcrew/cli/: agents_cmd.py  main.py  run_cmd.py  yaml_schema.py
src/deepcrew/integrations/: __init__.py  fastapi.py
src/deepcrew/mcp/: __init__.py  base.py  http.py  manager.py  sse.py  stdio.py
src/deepcrew/memory/: __init__.py  base.py  file.py  inmemory.py  redis_provider.py
src/deepcrew/skills/: __init__.py  base.py  registry.py
src/deepcrew/skills/builtin/: __init__.py  code_exec.py  summarize.py  web_search.py
tests/: test_apex.py  test_cli.py  test_content.py  test_fastapi.py  test_hooks.py  test_loop.py  test_mcp.py  test_memory.py  test_orchestrator.py  test_procedural_memory.py  test_retry.py  test_runner.py  test_skills_builtin.py  test_spawner.py  test_stream.py  test_stream_policy.py  test_structured_output.py  test_tools.py  test_verifier.py  test_workflow.py
