[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepcrew"]

[project]
name = "deepcrew-ai"
version = "0.1.0"
description = "Multi-agent spawning library with litellm, MCP tools, and parallel workflows"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "multi-agent", "litellm", "mcp", "workflow", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
]

dependencies = [
    "litellm>=1.63.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "pydantic>=2.0.0",
    "anyio>=4.4.0",
    "typing-extensions>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/deepcrew-ai/deepcrew-ai"
Repository = "https://github.com/deepcrew-ai/deepcrew-ai"
Issues = "https://github.com/deepcrew-ai/deepcrew-ai/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
