[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepcrew"]

[project]
name = "deepcrew-ai"
version = "0.2.1"
description = "Multi-agent spawning library with APEX synthesis, looping, skills, memory, and observability"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "multi-agent", "litellm", "mcp", "workflow", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
]

dependencies = [
    "litellm>=1.63.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "pydantic>=2.0.0",
    "anyio>=4.4.0",
    "typing-extensions>=4.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
redis = [
    "redis>=5.0.0",
]

[project.scripts]
deepcrew = "deepcrew.cli.main:main"

[project.urls]
Homepage = "https://github.com/Aayush-Joshi-01/deepcrew-ai"
Repository = "https://github.com/Aayush-Joshi-01/deepcrew-ai"
Issues = "https://github.com/Aayush-Joshi-01/deepcrew-ai/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
