[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deepcrew"]

[project]
name = "deepcrew-ai"
version = "0.4.0"
description = "Multi-agent spawning library with a self-improving loop (verifier, adaptive budget, branching, skill distillation, procedural memory), APEX synthesis, bounded nested spawning, and observability"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "agents", "multi-agent", "litellm", "mcp", "workflow", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]

dependencies = [
    "litellm>=1.63.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "pydantic>=2.0.0",
    "anyio>=4.4.0",
    "typing-extensions>=4.9.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest-cov>=5.0",
]
otel = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
]
redis = [
    "redis>=5.0.0",
]
fastapi = [
    "fastapi>=0.110",
]

[project.scripts]
deepcrew = "deepcrew.cli.main:main"

[project.urls]
Homepage = "https://github.com/Aayush-Joshi-01/deepcrew-ai"
Documentation = "https://deepcrew-ai.aayushjoshi.dev"
Repository = "https://github.com/Aayush-Joshi-01/deepcrew-ai"
Issues = "https://github.com/Aayush-Joshi-01/deepcrew-ai/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "ASYNC"]

[tool.mypy]
python_version = "3.11"
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["litellm.*", "redis.*", "opentelemetry.*", "fastapi.*", "yaml", "yaml.*"]
ignore_missing_imports = true
